Adiciona o menu mobile

--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
             </div>
             <div class="header-bottom">
                 <label for="mostra-esconde-navmenu"><img src="./assets/menu-hamburger.svg" alt="Menu Hamburger"
-                        title="Ícone Menu"></label>
+                        title="Ícone Menu">
+                </label>
 
 
                 <h1>
                     <span class="title">Gamer</span>
-                    <img src="./assets/logotipo-gamer.svg" alt="Logotipo Gamer" title="Gamer Logotipo">
+                    <img src="./assets/logotipo-gamer.svg" id="logotipo" alt="Logotipo Gamer" title="Gamer Logotipo">
                 </h1>
 
                 <input type="checkbox" id="mostra-esconde-navmenu">
@@ -46,14 +47,14 @@
                         <a href="#">Equipes</a>
                         <a href="#">Notícias</a>
 
-                        <span class="phone-box">
+                        <a class="phone-box">
                             <img src="./assets/phone-icon.png" alt="phone icon" title="Ícone Telefone">
                             (11) 0900-1010
-                        </span>
-                        <span class="mail-box">
+                        </a>
+                        <a class="mail-box">
                             <img src="./assets/envelope-icon.png" alt="envelope icon" title="Ícone Envelope">
                             contato@gamer.com.br
-                        </span>
+                        </a>
 
                         <!-- social icons -->
                         <span class="social-box">
