Finaliza o menu mobile

--- a/index.html
+++ b/index.html
@@ -80,7 +80,50 @@
             </div>
         </div>
     </header>
-    <section class="banner"></section>
+    <section class="banner">
+        <h2>Liga Gamers</h2>
+
+        <a href="#" class="btn-sobreliga">Sobre</a>
+    </section>
+
+    <!-- CARD JOGOS -->
+    <section class="card-jogos">
+        <img src="./images/Game-FIFA.png" alt="Fifa 23">
+        <img src="./images/Game-CS-GO.png" alt="Úlimo Jogo">
+    </section>
+
+    <!-- PROGAMER -->
+    <section class="progamer">
+        <div>
+            <h2>Entre para o time progamer</h2>
+            <hr>
+        </div>
+        <!-- <div class="layer-image-background"> -->
+        <img src="./images/kiljoy.png" alt="Gamer 1">
+        <img src="./images/lade-lol.png" alt="Gamer 2">
+        <!-- </div> -->
+
+        <div class="cards-progamer-box">
+            <!-- efeito borda gradient -->
+            <div class="card-bkg">
+                <article class="cards-jogos">
+                    <img src="./assets/joystick-icon.svg" alt="Icone Joystick">
+                    <h3>Professores</h3>
+                    <p>TSão mais de 20 jogos em 2 plataformas dispóniveis para que você possa aprender melhores técnicas.</p>
+                </article>
+            </div>
+            
+            <div class="card-bkg">
+                <article class="cards-jogos">
+                    <img src="./assets/joystick-prof-icon.svg" alt="Icone Joystick">
+                    <h3>Professores</h3>
+                    <p>Temos 53 Proplayers no nosso time para ensinar todas as es- tratégias, você vai aprender do
+                        básico ao avançado. <br>
+                        Tempo de treinamento, des- canso, equipamentos.</p>
+                </article>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
