Finaliza a Sessão Progamer

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
             </div>
         </div>
     </header>
+
+    <!-- BANNER LIGA GAMERS -->
     <section class="banner">
         <h2>Liga Gamers</h2>
 
@@ -103,20 +105,20 @@
         <img src="./images/lade-lol.png" alt="Gamer 2">
         <!-- </div> -->
 
-        <div class="cards-progamer-box">
+        <div class="cards-progamer-layer">
             <!-- efeito borda gradient -->
             <div class="card-bkg">
-                <article class="cards-jogos">
+                <article class="card-jogos">
                     <img src="./assets/joystick-icon.svg" alt="Icone Joystick">
-                    <h3>Professores</h3>
-                    <p>TSão mais de 20 jogos em 2 plataformas dispóniveis para que você possa aprender melhores técnicas.</p>
+                    <h3>20 Jogos Diferentes</h3>
+                    <p>São mais de 20 jogos em 2 plataformas dispóniveis para que você possa aprender melhores técnicas.</p>
                 </article>
             </div>
             
             <div class="card-bkg">
-                <article class="cards-jogos">
+                <article class="card-jogos">
                     <img src="./assets/joystick-prof-icon.svg" alt="Icone Joystick">
-                    <h3>Professores</h3>
+                    <h3>53 Professores</h3>
                     <p>Temos 53 Proplayers no nosso time para ensinar todas as es- tratégias, você vai aprender do
                         básico ao avançado. <br>
                         Tempo de treinamento, des- canso, equipamentos.</p>
