--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
 
     <!-- BANNER LIGA GAMERS -->
     <section class="banner">
-        <h2>Liga Gamers</h2>
-
+        <h2>Liga Gamer</h2>
         <a href="#" class="btn-sobreliga">Sobre</a>
     </section>
 
@@ -126,6 +125,64 @@
             </div>
         </div>
     </section>
+
+    <!-- NOTÍCIAS -->
+    <section class="noticias">
+        <div>
+            <h2>Notícias</h2>
+            <hr>
+        </div>
+
+        <article class="card-noticia">
+            <img src="./images/noticia1.png" alt="Notícia 1">
+            <h3>Título da Notícia</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
+        </article>
+
+        <article class="card-noticia">
+            <img src="./images/noticia2.png" alt="Notícia 1">
+            <h3>Título da Notícia</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
+        </article>
+
+        <article class="card-noticia">
+            <img src="./images/noticia3.png" alt="Notícia 1">
+            <h3>Título da Notícia</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
+        </article>
+
+        <article class="card-noticia">
+            <img src="./images/noticia4.png" alt="Notícia 1">
+            <h3>Título da Notícia</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
+        </article>
+
+        <article class="card-noticia">
+            <img src="./images/noticia5.png" alt="Notícia 1">
+            <h3>Título da Notícia</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
+        </article>
+
+        <article class="card-noticia">
+            <img src="./images/noticia6.png" alt="Notícia 1">
+            <h3>Título da Notícia</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
+        </article>
+
+        <article class="card-noticia">
+            <img src="./images/noticia7.png" alt="Notícia 1">
+            <h3>Título da Notícia</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
+        </article>
+
+        <article class="card-noticia">
+            <img src="./images/noticia8.png" alt="Notícia 1">
+            <h3>Título da Notícia</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
+        </article>
+
+    </section>
+
 </body>
 
 </html>
