--- a/index.html
+++ b/index.html
@@ -95,94 +95,181 @@
 
     <!-- PROGAMER -->
     <section class="progamer">
-        <div>
-            <h2>Entre para o time progamer</h2>
-            <hr>
-        </div>
-        <!-- <div class="layer-image-background"> -->
-        <img src="./images/kiljoy.png" alt="Gamer 1">
-        <img src="./images/lade-lol.png" alt="Gamer 2">
-        <!-- </div> -->
-
-        <div class="cards-progamer-layer">
-            <!-- efeito borda gradient -->
-            <div class="card-bkg">
-                <article class="card-jogos">
-                    <img src="./assets/joystick-icon.svg" alt="Icone Joystick">
-                    <h3>20 Jogos Diferentes</h3>
-                    <p>São mais de 20 jogos em 2 plataformas dispóniveis para que você possa aprender melhores técnicas.</p>
-                </article>
+        <div class="container-grid progamer-flex">
+            <div>
+                <h2>Entre para o time progamer</h2>
+                <hr>
             </div>
-            
-            <div class="card-bkg">
-                <article class="card-jogos">
-                    <img src="./assets/joystick-prof-icon.svg" alt="Icone Joystick">
-                    <h3>53 Professores</h3>
-                    <p>Temos 53 Proplayers no nosso time para ensinar todas as es- tratégias, você vai aprender do
-                        básico ao avançado. <br>
-                        Tempo de treinamento, des- canso, equipamentos.</p>
-                </article>
+
+            <!-- efeito borda gradient -->
+            <div class="gamers">
+                <img src="./images/kiljoy.png" alt="Gamer 1">
+                <div class="card-bkg" id="jogos-diferentes">
+                    <article class="card-jogos">
+                        <img src="./assets/joystick-icon.svg" alt="Icone Joystick">
+                        <h3>20 Jogos Diferentes</h3>
+                        <p>São mais de 20 jogos em 2 plataformas dispóniveis para que você possa aprender melhores
+                            técnicas.</p>
+                    </article>
+                </div>
+            </div>
+
+            <div class="gamers">
+                <img src="./images/lade-lol.png" alt="Gamer 2">
+                <div class="card-bkg" id="professores">
+                    <article class="card-jogos">
+                        <img src="./assets/joystick-prof-icon.svg" alt="Icone Joystick">
+                        <h3>53 Professores</h3>
+                        <p>Temos 53 Proplayers no nosso time para ensinar todas as es- tratégias, você vai aprender do
+                            básico ao avançado. <br>
+                            Tempo de treinamento, des- canso, equipamentos.</p>
+                    </article>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- NOTÍCIAS -->
     <section class="noticias">
-        <div>
-            <h2>Notícias</h2>
-            <hr>
+        <div class="container-grid noticias-flex">
+            <div>
+                <h2>Notícias</h2>
+                <hr>
+            </div>
+
+            <article class="card-noticia">
+                <img src="./images/noticia1.png" alt="Notícia 1">
+                <h3>Título da Notícia</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since.</p>
+            </article>
+
+            <article class="card-noticia">
+                <img src="./images/noticia2.png" alt="Notícia 1">
+                <h3>Título da Notícia</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since.</p>
+            </article>
+
+            <article class="card-noticia">
+                <img src="./images/noticia3.png" alt="Notícia 1">
+                <h3>Título da Notícia</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since.</p>
+            </article>
+
+            <article class="card-noticia">
+                <img src="./images/noticia4.png" alt="Notícia 1">
+                <h3>Título da Notícia</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since.</p>
+            </article>
+
+            <article class="card-noticia">
+                <img src="./images/noticia5.png" alt="Notícia 1">
+                <h3>Título da Notícia</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since.</p>
+            </article>
+
+            <article class="card-noticia">
+                <img src="./images/noticia6.png" alt="Notícia 1">
+                <h3>Título da Notícia</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since.</p>
+            </article>
+
+            <article class="card-noticia">
+                <img src="./images/noticia7.png" alt="Notícia 1">
+                <h3>Título da Notícia</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since.</p>
+            </article>
+
+            <article class="card-noticia">
+                <img src="./images/noticia8.png" alt="Notícia 1">
+                <h3>Título da Notícia</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since.</p>
+            </article>
         </div>
-
-        <article class="card-noticia">
-            <img src="./images/noticia1.png" alt="Notícia 1">
-            <h3>Título da Notícia</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-        </article>
-
-        <article class="card-noticia">
-            <img src="./images/noticia2.png" alt="Notícia 1">
-            <h3>Título da Notícia</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-        </article>
-
-        <article class="card-noticia">
-            <img src="./images/noticia3.png" alt="Notícia 1">
-            <h3>Título da Notícia</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-        </article>
-
-        <article class="card-noticia">
-            <img src="./images/noticia4.png" alt="Notícia 1">
-            <h3>Título da Notícia</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-        </article>
-
-        <article class="card-noticia">
-            <img src="./images/noticia5.png" alt="Notícia 1">
-            <h3>Título da Notícia</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-        </article>
-
-        <article class="card-noticia">
-            <img src="./images/noticia6.png" alt="Notícia 1">
-            <h3>Título da Notícia</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-        </article>
-
-        <article class="card-noticia">
-            <img src="./images/noticia7.png" alt="Notícia 1">
-            <h3>Título da Notícia</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-        </article>
-
-        <article class="card-noticia">
-            <img src="./images/noticia8.png" alt="Notícia 1">
-            <h3>Título da Notícia</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-        </article>
-
     </section>
 
+
+
+    <!-- FOOTER -->
+    <footer>
+        <div class="container-grid footer-flex">
+
+            <div class="card-ftitem-box">
+                <a href="#" id="ftlogo-link">
+                    <img src="./assets/logotipo-gamer.svg" id="ftlogo" alt="Home">
+                </a>
+                <p>Nosso sucesso na criação de soluções de negócios se deve em grande parte à nossa equipe talentosa e
+                    altamente comprometida.</p>
+                <div class="social-fticons">
+                    <a href="#">
+                        <img src="./assets/facebook-yellow.svg" alt="Icone Facebook">
+                    </a>
+                    <a href="#">
+                        <img src="./assets/linkedin-yellow.svg" alt="Icone Linkedin">
+                    </a>
+                    <a href="#">
+                        <img src="./assets/instagram-yellow.svg" alt="Icone instagram">
+                    </a>
+                </div>
+            </div>
+
+
+            <div class="card-ftitem-box">
+                <div>
+                    <h2>Links Úteis</h2>
+                    <hr>
+                </div>
+
+                <ul>
+                    <li><a href="#">Início</a></li>
+                    <li><a href="#">Jogadores</a></li>
+                    <li><a href="#">Equipes</a></li>
+                    <li><a href="#">Notícias</a></li>
+                    <li><a href="#">Login</a></li>
+                </ul>
+            </div>
+
+            <div class="card-ftitem-box">
+                <div>
+                    <h2>Contatos</h2>
+                    <hr>
+                </div>
+
+                <div>
+                    <p>
+                        <span>Localização:</span><br>
+                        Rua Niterói, 180 - São Caetano do Sul - SP
+                    </p>
+                    <p>
+                        <span>Junte-se a nós:</span><br>
+                        <a href="mailto:contato">contato@gamer.com.br</a>
+                    </p>
+                    <p>
+                        <span>Telefone:</span><br>
+                        (11) 0900-1010
+                    </p>
+                </div>
+            </div>
+
+            <div class="card-ftitem-box">
+                <div>
+                    <h2>Newsletter</h2>
+                    <hr>
+                </div>
+            </div>
+        </div>
+
+        <div id="copyright">
+            &#169;Copyright2022-GamerJogosDigitais
+        </div>
+    </footer>
 </body>
 
 </html>
