--- a/index.html
+++ b/index.html
@@ -269,12 +269,13 @@
                 </form>
             </div>
 
-            <img src="" alt="Voltar ao Topo">
         </div>
-
+        
         <div id="copyright">
             &#169;Copyright2022-GamerJogosDigitais
         </div>
+        
+        <img src="./assets/Botao_voltar_ao_topo.svg" id="back-to-top" alt="Voltar ao Topo">
     </footer>
 </body>
 
