--- a/index antigo.html
+++ b/index antigo.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <!-- HEADER -->
+
     <header class="header">
-        <div class="header-top">
-            <div class="container-grid header-top-flex">
+        <div class="container-grid">
+            <div class="header-top">
                 <div>
                     <span class="phone-box">
                         <img src="./assets/phone-icon.png" alt="phone icon" title="Ícone Telefone">
@@ -32,9 +32,7 @@
                     <img src="./assets/instagram.svg" alt="phone icon" title="Ícone Telefone">
                 </span>
             </div>
-        </div>
-        <div class="header-bottom">
-            <div class="container-grid header-bottom">
+            <div class="header-bottom">
                 <label for="mostra-esconde-navmenu"><img src="./assets/menu-hamburger.svg" alt="Menu Hamburger"
                         title="Ícone Menu">
                 </label>
@@ -94,17 +92,15 @@
     </section>
 
     <!-- CARD JOGOS -->
-    <section >
-        <div class="container-grid card-jogos">
-            <img src="./images/Game-FIFA.png" alt="Fifa 23">
-            <img src="./images/Game-CS-GO.png" alt="Úlimo Jogo">
-        </div>
+    <section class="card-jogos">
+        <img src="./images/Game-FIFA.png" alt="Fifa 23">
+        <img src="./images/Game-CS-GO.png" alt="Úlimo Jogo">
     </section>
 
     <!-- PROGAMER -->
     <section class="progamer">
         <div class="container-grid progamer-flex">
-            <div class="progamer-title">
+            <div>
                 <h2>Entre para o time progamer</h2>
                 <hr>
             </div>
@@ -113,7 +109,7 @@
             <div class="gamers">
                 <img src="./images/kiljoy.png" alt="Gamer 1">
                 <div class="card-bkg" id="jogos-diferentes">
-                    <article class="produto">
+                    <article class="card-jogos">
                         <img src="./assets/joystick-icon.svg" alt="Icone Joystick">
                         <h3>20 Jogos Diferentes</h3>
                         <p>São mais de 20 jogos em 2 plataformas dispóniveis para que você possa aprender melhores
@@ -125,7 +121,7 @@
             <div class="gamers">
                 <img src="./images/lade-lol.png" alt="Gamer 2">
                 <div class="card-bkg" id="professores">
-                    <article class="produto">
+                    <article class="card-jogos">
                         <img src="./assets/joystick-prof-icon.svg" alt="Icone Joystick">
                         <h3>53 Professores</h3>
                         <p>Temos 53 Proplayers no nosso time para ensinar todas as es- tratégias, você vai aprender do
