Ajusta a cor dos inputs

--- a/login.html
+++ b/login.html
@@ -90,7 +90,7 @@
 
 
 
-
+<!-- FORMULÁRIO DE LOGIN -->
     <main class="fundo-login">
         <div class="bkg-login">
             <form class="frm-login">
