--- a/login.html
+++ b/login.html
@@ -110,6 +110,8 @@
                         <input type="password" id="password" placeholder="Digite sua senha:">
                     </div>
                 </div>
+
+                <button class="btn-logar">Logar</button>
             </form>
         </div>
 
